// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignDid should render with credentials 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <section
      class="container"
    >
      <div
        class="avatar fullDid"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <dl
      class="details"
    >
      <dt
        class="detailName"
      >
        Request from:
      </dt>
      <dd
        class="detailValue"
      >
        https://example.org/foo
      </dd>
      <dt
        class="detailName"
      >
        Data to be signed:
      </dt>
      <dd
        class="data"
      >
        All your base are belong to us
      </dd>
      <dt
        class="detailName"
      >
        Credentials:
      </dt>
      <dd
        class="detailValue"
      >
        Email Credential, A really long name for my credential which probably will not fit on the screen
      </dd>
    </dl>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </form>
</div>
`;

exports[`SignDid should render without credentials 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Sign with DID
    </h1>
    <section
      class="container"
    >
      <div
        class="avatar fullDid"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <section
      class="noCredentials"
    >
      <p
        class="label"
      >
        Request from:
      </p>
      <p
        class="origin"
      >
        https://example.org/foo
      </p>
      <p
        class="label"
        id="plaintext"
      >
        Data to be signed:
      </p>
      <p
        class="plaintextLine"
      >
        <textarea
          aria-labelledby="plaintext"
          class="plaintext"
          readonly=""
        >
          All your base are belong to us
        </textarea>
        <button
          aria-label="copy to clipboard"
          class="copy"
          title="copy to clipboard"
          type="button"
        />
      </p>
    </section>
    <p
      class="resetLine"
    >
      <label
        class="passwordLabel"
        for="password"
      >
        Sign with password:
      </label>
      <a
        class="reset"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/reset"
      >
        Reset password
      </a>
    </p>
    <p
      class="passwordLine"
    >
      <input
        class="password"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        aria-label="Show"
        class="show"
        title="Show"
        type="button"
      />
      <output
        class="errorTooltip"
        hidden=""
      />
    </p>
    <label
      class="rememberLabel"
    >
      <span>
        Remember password for the next 15 minutes
      </span>
      <input
        class="remember"
        name="remember"
        type="checkbox"
      />
      <span />
    </label>
    <p
      class="buttonsLine"
    >
      <button
        class="cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="submit"
        type="submit"
      >
        Sign
      </button>
    </p>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </form>
</div>
`;
